grilo: Add debug statements

https://bugzilla.gnome.org/show_bug.cgi?id=746165